# blueverse-network-capacity-planning

./: .gitattributes  .gitignore  README.md  kafka_2.13-3.8.0.tgz  pyproject.toml
checkpoints/: epoch=0-step=1491.ckpt  epoch=0-step=184.ckpt  epoch=0-step=836.ckpt  epoch=2-step=915.ckpt
images/: network_capacity_tft_pytorch.py
lightning_logs/version_0/: hparams.yaml
lightning_logs/version_1/: hparams.yaml
lightning_logs/version_10/: events.out.tfevents.1756377698.sindhu-Dell-G15-5530
lightning_logs/version_11/: events.out.tfevents.1756377716.sindhu-Dell-G15-5530
lightning_logs/version_12/: events.out.tfevents.1756377726.sindhu-Dell-G15-5530  hparams.yaml
lightning_logs/version_13/: events.out.tfevents.1756377916.sindhu-Dell-G15-5530
lightning_logs/version_14/: events.out.tfevents.1756377990.sindhu-Dell-G15-5530
lightning_logs/version_15/: events.out.tfevents.1756378019.sindhu-Dell-G15-5530
lightning_logs/version_16/: events.out.tfevents.1756378028.sindhu-Dell-G15-5530
lightning_logs/version_17/: events.out.tfevents.1756378231.sindhu-Dell-G15-5530  hparams.yaml
lightning_logs/version_18/: events.out.tfevents.1756378278.sindhu-Dell-G15-5530
lightning_logs/version_19/: events.out.tfevents.1756378293.sindhu-Dell-G15-5530
lightning_logs/version_2/: events.out.tfevents.1756370644.sindhu-Dell-G15-5530
lightning_logs/version_20/: events.out.tfevents.1756378305.sindhu-Dell-G15-5530
network_capacity_venv/: pyvenv.cfg
scripts/: dashboard.py  data_collection.py  inference.py  kafka_consumer.py  model.py  preprocessing.py  train.py
(+53 files in other folders)
